day_65  map and lambda fonctions

--- a/SummerHoliday_java/bin/.gitignore
+++ b/SummerHoliday_java/bin/.gitignore
@@ -1,12 +1,5 @@
 /.metadata/
-/day64_Collections/
-/day26_forEach/
-/day27_customMethods/
-/day28_review/
-/day29_ReturnMethods/
-/day30_wrapperClass/
-/day31_review/
-/day32_ArrayList/
+/day65_/
 /day33_Constructors/
 /day34_returnMethotWithArrayList/
 /day35_practice/
@@ -28,5 +21,7 @@
 /day53_InterfaceContinue/
 /day54_Polymorphisim/
 /day55Exeptions/
+/day64_Collections/
 /nobet_prog/
 /replit/
+/day65_mapInterface/
