--- a/SummerHoliday_java/bin/.gitignore
+++ b/SummerHoliday_java/bin/.gitignore
@@ -1,5 +1,40 @@
 /.metadata/
-/day65_/
+/.project
+/Assigments2/
+/Assignment3/
+/Assignments/
+/TaskData.properties
+/day01_FirstProgramming/
+/day03_Variables/
+/day04_Variabes2/
+/day05_Recap/
+/day06_ArithmaticOperators/
+/day07_Uneray_ShortHand/
+/day08_ShortHandOperators/
+/day09_review/
+/day10_ifStatement/
+/day11_If_Else_review/
+/day12_SwitchStatement/
+/day13_review/
+/day14_Scanner/
+/day15_ScannerClass/
+/day16_warmup/
+/day17_StringClass/
+/day18_stringMethods/
+/day19_forLoop/
+/day20/
+/day21_whileLoop/
+/day22_nestedLoop/
+/day23_arrays/
+/day24_warmUpArrays/
+/day25_arrayMethods/
+/day26_forEach/
+/day27_customMethods/
+/day28_review/
+/day29_ReturnMethods/
+/day30_wrapperClass/
+/day31_review/
+/day32_ArrayList/
 /day33_Constructors/
 /day34_returnMethotWithArrayList/
 /day35_practice/
@@ -14,14 +49,16 @@
 /day45_Inheritance/
 /day45_Protected_Default/
 /day46_superKeyWord/
+/day47_Review/
 /day48_MethodOverRiding/
 /day49_AbstractMethod/
 /day50_Abstractio/
+/day50_Abstraction/
 /day52_Interface/
 /day53_InterfaceContinue/
 /day54_Polymorphisim/
 /day55Exeptions/
 /day64_Collections/
+/day65_mapInterface/
 /nobet_prog/
 /replit/
-/day65_mapInterface/
