--- a/SummerHoliday_java/bin/.gitignore
+++ b/SummerHoliday_java/bin/.gitignore
@@ -1,7 +1,65 @@
 /.metadata/
+/Assigments2/
+/Assignment3/
+/Assignments/
+/day01_FirstProgramming/
+/day03_Variables/
+/day04_Variabes2/
+/day05_Recap/
+/day06_ArithmaticOperators/
+/day07_Uneray_ShortHand/
+/day08_ShortHandOperators/
+/day09_review/
+/day10_ifStatement/
+/day11_If_Else_review/
+/day12_SwitchStatement/
+/day13_review/
+/day14_Scanner/
+/day15_ScannerClass/
+/day16_warmup/
+/day17_StringClass/
+/day18_stringMethods/
+/day19_forLoop/
+/day20/
+/day21_whileLoop/
+/day22_nestedLoop/
+/day23_arrays/
+/day24_warmUpArrays/
+/day25_arrayMethods/
+/day26_forEach/
+/day27_customMethods/
+/day28_review/
+/day29_ReturnMethods/
+/day30_wrapperClass/
+/day31_review/
+/day32_ArrayList/
+/day33_Constructors/
+/day34_returnMethotWithArrayList/
+/day35_practice/
+/day37_classAndObjects/
+/day38_classAndObjectsday38_CustomClassContinue/
+/day39_javaReview/
+/day40_StaticKeyWord/
+/day41_InitializerBocks/
+/day42_OOP_Encapsulation/
+/day43_shortCut_Getter_Setter/
+/day44_AccessModifiers/
+/day45_Inheritance/
+/day45_Protected_Default/
+/day46_superKeyWord/
+/day48_MethodOverRiding/
+/day49_AbstractMethod/
+/day50_Abstractio/
+/day52_Interface/
+/day53_InterfaceContinue/
+/day54_Polymorphisim/
+/day55_Exceptions/
+/day62_Collections/
+/day64_Collections/
 /day650_TestCollections/
 /day651_compare_Comparator/
-/javaCertificationQa/
-/day55_Exceptions/
 /day652_genericMethod/
-/day50_Abstractio/
+/day65_mapInterface/
+/javaCertificationQa/
+/nobet_prog/
+/replit/
